# portfolio-judge

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
calibration/: README.md
calibration/low_08/: metadata.yaml  review.md
calibration/low_09/: review.md
calibration/low_10/: review.md
calibration/mid_05_langchain/: metadata.yaml  review.md
calibration/mid_06_ragas/: metadata.yaml  review.md
calibration/mid_07_evals_skills/: metadata.yaml  review.md
calibration/phase2_01/: review.md
calibration/phase2_02/: review.md
calibration/phase2_03/: review.md
calibration/phase2_04/: metadata.yaml  review.md
calibration/phase2_05/: review.md
calibration/phase2_06/: review.md
calibration/phase2_07/: review.md
calibration/phase2_08/: review.md
calibration/phase2_09/: review.md
calibration/phase2_10/: review.md
calibration/top_01_datasette/: metadata.yaml  review.md
calibration/top_02_llm/: metadata.yaml  review.md
calibration/top_03_applied_ml/: metadata.yaml  review.md
calibration/top_04_aie_book/: metadata.yaml  review.md
evidence/: calibration_state.md  design_decisions.md  methodology.md  research_sources.md
examples/: README.md
examples/explodable_code_judge/: README.md  review.md
examples/explodable_full_review/: README.md  review.md
examples/explodable_prose_readme/: README.md  review.md
examples/explodable_structure/: README.md  scan.md
rubrics/: code_default.yaml
src/portfolio_judge/: __init__.py  cli.py  grounding.md  ingest.py  orchestrator.py
src/portfolio_judge/core/: calibration.py  llm.py  rubric.py  scorer.py
src/portfolio_judge/judges/: code.py  prose.py  structure.py
src/portfolio_judge/personas/: applied_ai_hm.md  devrel_hm.md  fde_solutions_hm.md  recruiter.md
src/portfolio_judge/rubrics/: prose_default.yaml
tests/: test_calibration.py  test_ingest.py  test_rubric.py  test_scorer.py  test_structure.py
